# eag6l_mirror

./: .gitignore  README.md  dx_setup.env  kernel  setup.env
fpga/: fpga_img_gen.sh
mrvl_linux-4.14.76/: localversion
package/: .gitignore  cpss
package/busybox-1.34.1/: build.sh  busybox.mcua  busybox_mcuacfg
package/cpss/: build.sh  simul.sh
package/cpss_4_3_12/: .gitignore  0001_CPSS-4.3.12_Patch-002_AP_FW_Falcon_Aldrin_Aldrin2.patch  CPSS-4.3.12_Patch-001_CPSS-19930.patch  Makefile  README.simul  build.sh  build_cpss.bat  build_cpss.sh  config.mk  simul.sh
package/cpss_4_3_5/: .config_armv7_debug  README.simul  build.sh
package/dbgsh/: .gitignore  Makefile  build.sh  cmd_init.c  command.c  command.h  hdriver.h  vtysh.c  vtysh_main.c
package/dropbear-2022.83/: build.sh  dbrandom.c
package/fwimage/: .gitignore  Makefile  build.sh  crc32.c  fwimage.c  fwimage.h
package/i2c-tools/: build.sh
package/include/: hdriver.h  rsmu.h
package/quagga-1.2.4/: Makefile.am  Makefile.in  aclocal.m4  build.sh  config.h.in  configure  configure.ac  sysmon.conf  vtysh.conf
package/quagga-1.2.4/sysmon/: Makefile.am  Makefile.in  bp_regs.h  devmem.c  monitor_registers.c  rdl_fsm.c  rdl_fsm.h  svc_fsm.c  svc_fsm.h  sys_fifo.c  sys_fifo.h  sys_i2c.c  sys_i2c.h  sysmon.c  sysmon.h  sysmon_hw.c  sysmon_main.c  sysmon_util.c  sysmon_vty.c  sysmon_zebra.c
package/synced-2.0.5/: Makefile  build.sh
package/sysmon/: .gitignore  Makefile  build.sh  core  cpss.c  devmem.c  log.c  memory.c  memtypes.c  pid_output.c  pqueue.c  rdl_fsm.c  rdl_fsm.h  sigevent.c  sysmon.c  sysmon.h  thread.c  thread.h
rootfs.user/etc/: eag6l_nebs.cfg  fw_env.config  group  hosts  inetd.conf  inittab  issue.net  ld.so.cache  mdev.conf  mdev.conf.org  motd  nsswitch.conf  passwd  profile  rc  sdmounter.sh  shadow  simple1.script  simple2.script  sshd_config  syslog.conf  zebra.conf
rootfs.user/sbin/: act-pkg  act-pkg1  act-pkg2  conf-backup-sftp  conf-backup-tftp  conf-restore-sftp  conf-restore-tftp  down-pkg  down-pkg.exp  down-pkg.orig  ethtool  fdbget.exp  fpga_access.exp  fpga_image_valid.exp  fpga_ofiuapp_upload.exp  fpga_ofiuapp_valid.exp  fpga_sync.exp  fpga_upload.exp  fsck.ext4  inst-pkg  (+11 more)
scripts/: fwimage  img_gen.sh  mkfwimage
u-boot/: 0925.diff  Makefile  swap.sh  uboot.raw  uboot1.raw
(+4699 files in other folders)
